wal-rsx/tests/elements/element_with_single_literal_fail.rs
use wal_rsx::rsx;

fn main() {
    rsx! { <div> b"val" </div> };
}
